traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: not found: value bool
      case Direction.EAST => gauche(); bool=estFaceMur(); droite();
                                       ^Snake:7: error: not found: value bool
      case Direction.WEST => droite(); bool=estFaceMur(); gauche();
                                       ^